# IOS-MCN

ios-mcn-ran-distributed/: .gitignore  Makefile  README.md  sonar-project.properties
ios-mcn-ran-distributed/.scannerwork/: report-task.txt
ios-mcn-ran-distributed/conf/: gnb-cucp.sa.f1-e1.iisc.conf  gnb-du.sa.band78.106PRB.1x1-f1-e1-usrpx310.conf  gnb-du.sa.band78.273PRB.2x2-f1-e1-vvdn_gen1.iisc.conf
ios-mcn-ran-distributed/conf/o1-config/config/: pmData-measData.xml
ios-mcn-ran-distributed/o1-adapter/: .gitignore
ios-mcn-ran-distributed/o1-adapter/docker/: Dockerfile.adapter
ios-mcn-ran-distributed/o1-adapter/docker/scripts/: cu_servertest.py  get-yangs.sh  install-yangs.sh  servertest.py
ios-mcn-ran-distributed/o1-adapter/integration/telnet/: Dockerfile
ios-mcn-ran-distributed/o1-adapter/src/: build.sh  main.c
ios-mcn-ran-distributed/o1-adapter/src/common/: config.h
ios-mcn-ran-distributed/o1-adapter/src/netconf/: netconf_data.c
ios-mcn-ran-distributed/o1-adapter/src/oai/: oai.c  oai_data.c  oai_data.h
ios-mcn-ran-distributed/o1-adapter/src/pm_data/: pm_data.c  pm_data.h
ios-mcn-ran-distributed/o1-adapter/src/telnet/: telnet.c  telnet.h
ios-mcn-ran-distributed/openairinterface5g/: .gitignore  CMakeLists.txt  Release notes  sst
ios-mcn-ran-distributed/openairinterface5g/common/: ngran_types.h
ios-mcn-ran-distributed/openairinterface5g/docker/: Dockerfile.base.dpdk.ubuntu22  Dockerfile.base.ubuntu22  Dockerfile.base.ubuntu22.iisc  Dockerfile.build.split72.ubuntu22  Dockerfile.build.split72.ubuntu22.iisc  Dockerfile.build.ubuntu22.iisc  Dockerfile.gNB.fhi72.ubuntu22  Dockerfile.gNB.fhi72.ubuntu22.iisc  Dockerfile.gNB.ubuntu22.iisc  Dockerfile.nr-cuup.ubuntu22.iisc
ios-mcn-ran-distributed/openairinterface5g/executables/: nr-cuup.c  nr-softmodem.c  softmodem-common.c  softmodem-common.h
ios-mcn-ran-distributed/openairinterface5g/openair1/PHY/: defs_RU.h  defs_gNB.h
ios-mcn-ran-distributed/openairinterface5g/openair2/COMMON/: f1ap_messages_types.h  ngap_messages_types.h  xnap_messages_def.h  xnap_messages_types.h
ios-mcn-ran-distributed/openairinterface5g/radio/fhi_72/: CMakeLists.txt  config-mplane.c  config-mplane.h  connect-mplane.c  init-mplane.c  init-mplane.h  oran-init.c  oran_isolate.c  rpc-send-recv.c  subscribe-mplane.c
ios-mcn-ran-distributed/openairinterface5g/radio/fhi_72/xml/: get-xml.c  get-xml.h
ios-mcn-ran-distributed/phy/: .gitignore
iosmcn.agartala.v0.1.0.core.source/amf-0.0.10.iosmcn.core.amf/: .gitignore
iosmcn.agartala.v0.1.0.core.source/smf-0.0.6.iosmcn.core.smf/: .gitignore
iosmcn.agartala.v0.1.0.core.source/upf-0.0.4.iosmcn.core.upf/: .gitignore  Dockerfile_CDAC  Dockerfile_IOSMCN  Makefile_CDAC  Makefile_IOSMCN
iosmcn.agartala.v0.1.0.core.source/upf-0.0.4.iosmcn.core.upf/conf/: route_control.py
iosmcn.agartala.v0.1.0.core.source/upf-0.0.4.iosmcn.core.upf/ptf/: Makefile_CDAC  Makefile_IOSMCN
iosmcn.agartala.v0.1.0.smo.source/oam-0.0.2.iosmcn.smo.oam/: pax_global_header
iosmcn.agartala.v0.1.0.smo.source/oam-0.0.2.iosmcn.smo.oam/oam-0.0.2.iosmcn.smo.oam/: .gitignore  docker-compose-grafana.yaml  docker-compose-influxdb.yaml  docker-compose-metbucket.yaml  docker-compose-nonrtric-v1.yaml  docker-compose-telegraf.yaml  docker-tear-down.sh
(+61 files in other folders)
